--- a/index.html
+++ b/index.html
@@ -9,26 +9,25 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <header class="container header active" id="home">
-            <div class="header-content">
-                <div class="left-header">
-                    <div class="h-shape"></div>
-                    <div class="image">
+        <header>
+            <div>
+                <div>
+                    <div>
+                    <div>
                         <img src="img/hero.png" alt="">
                     </div>
                 </div>
-                <div class="right-header">
-                    <h1 class="name">
-                        Hi, I'm <span>Solano Milan Diaz.</span>
+                <div>
+                    <h1>
+                        Hi, I'm <span>Siddhant Bhagat.</span>
                         A Web Developer.
                     </h1>
                     <p>
                         I'm a Web Developer, I love to create beautiful and functional websites.
                     </p>
-                    <div class="btn-con">
-                        <a href="" class="main-btn">
-                            <span class="btn-text">Download CV</span>
-                            <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    <div>
+                        <a href="">
+                            <span>Download CV</span>
                         </a>
                     </div>
                 </div>
