--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 </div>
                 <div>
                     <h1>
-                        Hi, I'm <span>Siddhant Bhagat.</span>
-                        A Web Developer.
+                        Hi, I'm <span>Siddhant Bhagat,</span>
+                        a student at UCSD.
                     </h1>
                     <p>
-                        I'm a Web Developer, I love to create beautiful and functional websites.
+                        I am majoring in Math-CS, and this is my personal portfolio.
                     </p>
                     <div>
                         <a href="">
