--- a/index.html
+++ b/index.html
@@ -3,36 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <header>
-            <div>
-                <div>
-                    <div>
-                    <div>
-                        <img src="img/hero.png" alt="">
-                    </div>
-                </div>
-                <div>
-                    <h1>
-                        Hi, I'm <span>Siddhant Bhagat,</span>
-                        a student at UCSD.
-                    </h1>
-                    <p>
-                        I am majoring in Math-CS, and this is my personal portfolio.
-                    </p>
-                    <div>
-                        <a href="">
-                            <span>Download CV</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <script src="" async defer></script>
+        
     </body>
 </html>
