--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <p>This is my portfolio</p>
+        <p>This is my personal portfolio</p>
     </body>
 </html>
