--- a/index.html
+++ b/index.html
@@ -9,6 +9,204 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <p>This is my personal portfolio</p>
+        <main>
+        <div>
+            <header><h1>Siddhant Bhagat: Personal Portfolio</h1></header>
+        </div>
+        <div>
+            <nav>
+                <a href="">About Me</a> |
+                <a href="">Pojects</a> |
+                <a href="">Work Experience</a> |
+                <a href="">Contact</a> 
+            </nav>
+        </div>
+        <div>
+            <h2>
+                About me
+            </h2>
+            <figure>
+                <img src="image_boy.png" width="200" height="200">
+                <figcaption><b>This should be my photo</b></figcaption>
+            </figure>
+            <br> 
+            <p><i>This paragraph will contain a short summy of me, i.e. bio</i></p>
+            <button type="button">Download Resume</button>
+            <br> <br>
+            <table>
+                <caption>Languages:</caption>
+                <colgroup>
+                    <col span="2" style="background-color: aqua">
+                </colgroup>
+                <tr>
+                  <th>Skill</th>
+                  <th>Years</th>
+                </tr>
+                <tr>
+                  <td>Java</td>
+                  <td>4</td>
+                </tr>
+                <tr>
+                  <td>C++</td>
+                  <td>4</td>
+                </tr>
+                <tr>
+                    <td>Python</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Pytorch</td>
+                    <td>1</td>
+                </tr>
+              </table>
+            <hr>
+        </div>
+        <div>
+            <h2>
+                Projects
+            </h2>
+            <ol>
+                <li><h3>Project 1</h3></li>
+                <ul>
+                    <li><pre>Summary    of the    internship</pre></li>
+                    <li><a href="">link</a> </li>
+                </ul>
+                <li><h3>Project 2</h3></li>
+                <ul>
+                    <li>Summary</li>
+                    <aside style="text-align:right">
+                        <strong>of the internship</strong>
+                    </aside>
+                    <li><a href="">link</a> </li>
+                </ul>
+            </ol>
+            <hr>
+        </div>
+        <div>
+            <h2>
+                Work Experience
+            </h2>
+            <section>
+                <h3><code>Company 1</code></h3>
+                <iframe src="https://tech.walmart.com/content/walmart-global-tech/en_us.html"
+                title="Walmart"></iframe>
+            </section>
+            <section>
+                <details>
+                    <summary><b>Company 2</b></summary>
+                    <p>I will put my other internship experience here</p>
+                </details>
+            </section>
+            <hr>
+        </div>
+        <div>
+            <h2>
+                Contact
+            </h2>
+            <div>
+                <form>
+                  <fieldset>
+                    <legend>Your Details:</legend>
+                  <div>
+                    <label>First Name</label>
+                    <input type="text" placeholder="Your name..">
+                  </div>
+                  <br>
+                  <div>
+                    <label>Last Name</label>
+                    <input type="text" placeholder="Your last name..">
+                  </div>
+                  <br>
+                  <div>
+                    <label>Choose your gender:</label>
+                    <input list="genders">
+                    <datalist id="genders">
+                    <option value="Male">
+                    <option value="Female">
+                    <option value="Not Specify">
+                    </datalist>
+                  </div>
+                  <br>
+                  <div>
+                    <label>Country</label>
+                    <select>
+                        <optgroup label="Asia">
+                            <option value="India">India</option>
+                            <option value="India">Pakistan</option>
+                        </optgroup>
+                        <optgroup label="Europe">
+                            <option value="India">UK</option>
+                            <option value="India">Italy</option>
+                        </optgroup>
+                       <option value="australia">Australia</option>
+                       <option value="canada">Canada</option>
+                       <option value="usa">USA</option>
+                    </select>
+                  </div>
+                  <br>
+                  <div>
+                    <label>Message</label>
+                    <textarea placeholder="Write something.."></textarea>
+                  </div>
+                  <br>
+                  <div>
+                    <input type="submit" value="Submit">
+                  </div>
+                </fieldset>
+                </form>
+              </div>
+              <hr>
+        </div>
+        <div>
+            <h1>Experiment</h1>
+            <section>
+                <audio controls>
+                    <source src="applause.mp3" type="audio/mpeg">
+                </audio>
+            </section>
+            <section>
+                <video width="320" height="240" controls>
+                    <source src="cars.mp4" type="video/mp4">
+                </video>
+            </section>
+            <picture>
+                <source media="(min-width:400)" srcset="image_boy.png">
+                <source media="(min-width:200)" srcset="image_girl.png">
+                <img src="image_polic.png" width="100" height="100">
+            </picture>
+        </div>
+        <br>
+        <strong>Canvas tag trial:</strong> <br>
+        <canvas id="myCanvas">Your browser does not support the canvas tag.</canvas>
+        <script>
+        var c = document.getElementById("myCanvas");
+        var ctx = c.getContext("2d");
+        ctx.fillStyle = "#AAFCFD";
+        ctx.fillRect(0, 0, 80, 100);
+        </script>
+        <br>
+        <em>SVG tag trial:</em> <br>
+        <svg width="400" height="180">
+            <rect x="50" y="20" rx="20" ry="20" width="150" height="150"
+            style="fill:rgba(99, 228, 181, 0.937);stroke:black;stroke-width:5;opacity:0.5" />
+        </svg>
+        <br>
+        <script>
+            function showContent() {
+                var temp = document.getElementsByTagName("template")[0];
+                var clon = temp.content.cloneNode(true);
+                document.body.appendChild(clon);
+            }
+        </script>
+        <b>Template tag trial:</b> <br>
+        <button onclick="showContent()">Hidden text</button>
+        <template>
+            <i>Not hidden anymore</i>
+        </template>
+        <hr>
+        <footer>
+            <p><em>Author: </em><strong>Siddhant Bhagat</strong></p><br>
+        </footer>
+        </main>
     </body>
 </html>
