--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" lang="EN">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Portfolio</title>
         <meta name="description" content="">
