--- a/index.html
+++ b/index.html
@@ -64,21 +64,19 @@
             <h2>
                 Projects
             </h2>
-            <ol>
-                <li><h3>Project 1</h3></li>
+                <h3>Project 1</h3>
                 <ul>
                     <li><pre>Summary    of the    internship</pre></li>
                     <li><a href="">link</a> </li>
                 </ul>
-                <li><h3>Project 2</h3></li>
-                <ul>
+                <h3>Project 2</h3>
+                <ol>
                     <li>Summary</li>
                     <aside style="text-align:right">
                         <strong>of the internship</strong>
                     </aside>
                     <li><a href="">link</a> </li>
-                </ul>
-            </ol>
+                </ol>
             <hr>
         </div>
         <div>
