--- a/index.html
+++ b/index.html
@@ -74,9 +74,6 @@
                     <li>Summary</li>
                     <li><a href="">link</a> </li>
                 </ol>
-                <aside style="text-align:right">
-                    <strong>of the internship</strong>
-                </aside>
             <hr>
         </div>
         <div>
@@ -183,6 +180,10 @@
         </script>
         <br>
         <em>SVG tag trial:</em> <br>
+        <aside style="text-align:right">
+            <strong>makes a rounded square</strong>
+        </aside>
+        <br>
         <svg width="400" height="180">
             <rect x="50" y="20" rx="20" ry="20" width="150" height="150"
             style="fill:rgba(99, 228, 181, 0.937);stroke:black;stroke-width:5;opacity:0.5" />
