--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                 </video>
             </section>
             <picture>
-                <source media="(min-width:400)" srcset="image_boy.png">
-                <source media="(min-width:200)" srcset="image_girl.png">
+                <source media="(min-width:250px)" srcset="image_boy.png">
+                <source media="(min-width:65px)" srcset="image_girl.png">
                 <img src="image_polic.png" width="100" height="100">
             </picture>
         </div>
