--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <picture>
                 <source media="(min-width:250px)" srcset="image_boy.png">
                 <source media="(min-width:65px)" srcset="image_girl.png">
-                <img src="image_polic.png" width="100" height="100">
+                <img src="image_polic.png" alt="policeman" width="100" height="100">
             </picture>
         </div>
         <br>
