--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <h2>
                 Work Experience
             </h2>
+            <div><
             <section>
                 <h3><code>Company 1</code></h3>
                 <iframe src="https://tech.walmart.com/content/walmart-global-tech/en_us.html"
@@ -91,6 +92,7 @@
                     <p>I will put my other internship experience here</p>
                 </details>
             </section>
+            </div>
             <hr>
         </div>
         <div>
