--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h2>
                 Work Experience
             </h2>
-            <div><
+            <div>
             <section>
                 <h3><code>Company 1</code></h3>
                 <iframe src="https://tech.walmart.com/content/walmart-global-tech/en_us.html"
