--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <h2>
                 Work Experience
             </h2>
-            <h3><code>Company 1</code></h3>
             <section>
+                <h3>Company 1</h3>
                 <iframe src="https://tech.walmart.com/content/walmart-global-tech/en_us.html"
                 title="Walmart"></iframe>
             </section>
@@ -170,7 +170,7 @@
             </picture>
         </div>
         <br>
-        <strong>Canvas tag trial:</strong> <br>
+        <code>Canvas tag trial:</code> <br>
         <canvas id="myCanvas">Your browser does not support the canvas tag.</canvas>
         <script>
         var c = document.getElementById("myCanvas");
