--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
             <h2>
                 Work Experience
             </h2>
-            <section>
+            <div>
                 <h3>Company 1</h3>
                 <iframe src="https://tech.walmart.com/content/walmart-global-tech/en_us.html"
                 title="Walmart"></iframe>
-            </section>
-            <section>
+            </div>
+            <div>
                 <details>
                     <summary><b>Company 2</b></summary>
                     <p>I will put my other internship experience here</p>
                 </details>
-            </section>
+            </div>
             <hr>
         </div>
         <div>
