--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                 <img src="image_boy.png" width="200" height="200">
                 <figcaption><b>This should be my photo</b></figcaption>
             </figure>
-            <br> 
-            <p><i>This paragraph will contain a short summy of me, i.e. bio</i></p>
+            <section>
+                <h3>Bio:</h3>
+                <p><i>This paragraph will contain a short summy of me, i.e. bio</i></p>
+            </section>
             <button type="button">Download Resume</button>
             <br> <br>
             <table>
@@ -153,16 +155,16 @@
         </div>
         <div>
             <h1>Experiment</h1>
-            <section>
+            <div>
                 <audio controls>
                     <source src="applause.mp3" type="audio/mpeg">
                 </audio>
-            </section>
-            <section>
+            </div>
+            <div>
                 <video width="320" height="240" controls>
                     <source src="cars.mp4" type="video/mp4">
                 </video>
-            </section>
+            </div>
             <picture>
                 <source media="(min-width:250px)" srcset="image_boy.png">
                 <source media="(min-width:65px)" srcset="image_girl.png">
