--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="main.css">
   </head>
 
   <body>
