--- a/index.html
+++ b/index.html
@@ -7,225 +7,250 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
     <main>
-      <div>
-        <header>
-          <h1>Siddhant Bhagat: Personal Portfolio</h1>
-        </header>
-      </div>
-      <div>
-        <nav>
-          <a href="">About Me</a> | <a href="">Pojects</a> |
-          <a href="">Work Experience</a> |
-          <a href="">Contact</a>
+      <div id="home">
+        <nav class="navbar">
+          <div class="logo">
+            <h2><span>Siddhant</span></h2>
+          </div>
+          <ul>
+            <li><a href="">About Me</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Work Experience</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+          <div id="hamburger">
+            <div class="small"></div>
+            <div class="small"></div>
+            <div class="small"></div>
+          </div>
         </nav>
-      </div>
-      <div>
-        <h2>About me</h2>
-        <figure>
-          <img src="image_boy.png" width="200" height="200" />
-          <figcaption><b>This should be my photo</b></figcaption>
-        </figure>
-        <section>
-          <h3>Bio:</h3>
-          <p>
-            <i>This paragraph will contain a short summy of me, i.e. bio</i>
-          </p>
-        </section>
-        <button type="button">Download Resume</button>
-        <br />
-        <br />
-        <table>
-          <caption>
-            Languages:
-          </caption>
-          <colgroup>
-            <col span="2" style="background-color: aqua" />
-          </colgroup>
-          <tr>
-            <th>Skill</th>
-            <th>Years</th>
-          </tr>
-          <tr>
-            <td>Java</td>
-            <td>4</td>
-          </tr>
-          <tr>
-            <td>C++</td>
-            <td>4</td>
-          </tr>
-          <tr>
-            <td>Python</td>
-            <td>2</td>
-          </tr>
-          <tr>
-            <td>Pytorch</td>
-            <td>1</td>
-          </tr>
-        </table>
-        <hr />
-      </div>
-      <div>
-        <h2>Projects</h2>
-        <h3>Project 1</h3>
-        <ul>
-          <li>
-            <pre>Summary    of the    internship</pre>
-          </li>
-          <li><a href="">link</a></li>
-        </ul>
-        <h3>Project 2</h3>
-        <ol>
-          <li>Summary</li>
-          <li><a href="">link</a></li>
-        </ol>
-        <hr />
-      </div>
-      <div>
-        <h2>Work Experience</h2>
-        <div>
-          <h3>Company 1</h3>
-          <iframe
-            src="https://tech.walmart.com/content/walmart-global-tech/en_us.html"
-            title="Walmart"
-          ></iframe>
+        <div id="intro">
+          <section class="intro_text">
+            <h1><span>Siddhant Bhagat</span></h1>
+            <p>This is my personal portfolio</p>
+            <button>Download Resume</button>
+            <div class="socials">
+              <a href=""><i class="fa-brands fa-instagram"></i></a>
+              <a href=""><i class="fa-brands fa-linkedin"></i></a>
+              <a href=""><i class="fa-brands fa-twitter"></i></a>
+              <a href=""><i class="fa-brands fa-snapchat"></i></a>
+            </div>
+          </section>
         </div>
-        <div>
-          <details>
-            <summary><b>Company 2</b></summary>
-            <p>I will put my other internship experience here</p>
-          </details>
-        </div>
-        <hr />
       </div>
-      <div>
-        <h2>Contact</h2>
-        <div>
-          <form>
-            <fieldset>
-              <legend>Your Details:</legend>
-              <div>
-                <label>First Name</label>
-                <input type="text" placeholder="Your name.." />
+
+
+
+      <div id="aboutme">
+        <div class="aboutme_container">
+          <div class="aboutme_contents">
+            <section class="myimg">
+              <img src="image_boy.png" alt="" id="bioimg">
+            </section>
+            <section class="bio">
+              <h1>About Me</h1>
+              <h2>Student at UCSD and majoring in Math-CS</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua.
+              </p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua. Ut enim ad minim veniam.
+              </p>
+              <div class="personal_info">
+                <div><span>Name:</span><span>Siddhant Bhagat</span></div>
+                <div><span>Age:</span><span>21</span></div>
+                <div><span>Email</span><span>sibhagat@ucsd.edu</span></div>
+                <div><span>Nationality:</span><span>Indian</span></div>
               </div>
-              <br />
               <div>
-                <label>Last Name</label>
-                <input type="text" placeholder="Your last name.." />
+                <button class="button">Download Resume</button>
               </div>
-              <br />
-              <div>
-                <label>Choose your gender:</label>
-                <input list="genders" />
-                <datalist id="genders">
-                  <option value="Male"></option>
-                  <option value="Female"></option>
-                  <option value="Not Specify"></option>
-                </datalist>
-              </div>
-              <br />
-              <div>
-                <label>Country</label>
-                <select>
-                  <optgroup label="Asia">
-                    <option value="India">India</option>
-                    <option value="India">Pakistan</option>
-                  </optgroup>
-                  <optgroup label="Europe">
-                    <option value="India">UK</option>
-                    <option value="India">Italy</option>
-                  </optgroup>
-                  <option value="australia">Australia</option>
-                  <option value="canada">Canada</option>
-                  <option value="usa">USA</option>
-                </select>
-              </div>
-              <br />
-              <div>
-                <label>Message</label>
-                <textarea placeholder="Write something.."></textarea>
-              </div>
-              <br />
-              <div>
-                <input type="submit" value="Submit" />
-              </div>
-            </fieldset>
-          </form>
+            </section>
+          </div>
         </div>
-        <hr />
       </div>
-      <div>
-        <h1>Experiment</h1>
-        <div>
-          <audio controls>
-            <source src="applause.mp3" type="audio/mpeg" />
-          </audio>
+
+
+
+
+      <div id="skills">
+        <div class="skills_container">
+          <section class="skills_title">
+            <h1>My Skills</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+              elit, sed do eiusmod tempor incididunt ut labore et 
+              dolore magna aliqua.
+            </p>
+          </section>
+          <section class="skills_container_2">
+            <div class="skills_box">
+              <i class="fa-brands fa-java"></i>
+              <h2>Java</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua.
+              </p>
+            </div>
+            <div class="skills_box">
+              <i class="fa-solid fa-code"></i>
+              <h2>C++</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua.
+              </p>
+            </div>
+            <div class="skills_box">
+              <i class="fa-brands fa-python"></i>
+              <h2>Python</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua.
+              </p>
+            </div>
+            <div class="skills_box">
+              <i class="fa-brands fa-html5"></i>
+              <h2>HTML</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua.
+              </p>
+            </div>
+            <div class="skills_box">
+              <i class="fa-brands fa-css3-alt"></i>
+              <h2>CSS</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua.
+              </p>
+            </div>
+            <div class="skills_box">
+              <i class="fa-brands fa-js"></i>
+              <h2>JavaScript</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua.
+              </p>
+            </div>
+          </section>
         </div>
-        <div>
-          <video width="320" height="240" controls>
-            <source src="cars.mp4" type="video/mp4" />
-          </video>
-        </div>
-        <picture>
-          <source media="(min-width:250px)" srcset="image_boy.png" />
-          <source media="(min-width:65px)" srcset="image_girl.png" />
-          <img src="image_polic.png" alt="policeman" width="100" height="100" />
-        </picture>
       </div>
-      <br />
-      <code>Canvas tag trial:</code> <br />
-      <canvas id="myCanvas"
-        >Your browser does not support the canvas tag.</canvas
-      >
-      <script>
-        var c = document.getElementById("myCanvas");
-        var ctx = c.getContext("2d");
-        ctx.fillStyle = "#AAFCFD";
-        ctx.fillRect(0, 0, 80, 100);
-      </script>
-      <br />
-      <em>SVG tag trial:</em> <br />
-      <aside style="text-align: right">
-        <strong>makes a rounded square</strong>
-      </aside>
-      <br />
-      <svg width="400" height="180">
-        <rect
-          x="50"
-          y="20"
-          rx="20"
-          ry="20"
-          width="150"
-          height="150"
-          style="
-            fill: rgba(99, 228, 181, 0.937);
-            stroke: black;
-            stroke-width: 5;
-            opacity: 0.5;
-          "
-        />
-      </svg>
-      <br />
-      <script>
-        function showContent() {
-          var temp = document.getElementsByTagName("template")[0];
-          var clon = temp.content.cloneNode(true);
-          document.body.appendChild(clon);
-        }
-      </script>
-      <b>Template tag trial:</b> <br />
-      <button onclick="showContent()">Hidden text</button>
-      <template>
-        <i>Not hidden anymore</i>
-      </template>
-      <hr />
-      <footer>
-        <p><em>Author: </em><strong>Siddhant Bhagat</strong></p>
-        <br />
-      </footer>
+
+
+
+      <div id="projects">
+        <div class="projects_container">
+          <section class="projects_title">
+            <h1>Projects</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+              elit, sed do eiusmod tempor incididunt ut labore et 
+              dolore magna aliqua.
+            </p>
+          </section>
+          <section class="projects_container_2">
+            <div class="projects_box">
+              <i class="fa-solid fa-book"></i>
+              <h2>Research Paper</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua.
+              </p>
+            </div>
+            <div class="projects_box">
+              <i class="fa-solid fa-mobile"></i>
+              <h2>ZooSeeker</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua.
+              </p>
+            </div>
+            <div class="projects_box">
+              <i class="fa-brands fa-github"></i>
+              <h2>GitHub</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua.
+              </p>
+            </div>
+          </section>
+        </div>
+      </div>
+
+
+
+      <div id="container">
+        <div class="row">
+          <section class="col">
+            <header id="title">
+              <h2>EDUCATION</h2>
+            </header>
+            <div class="contents">
+              <div class="box">
+                <h4>2018-2022</h4>
+                <h3>High School Degree</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                  elit, sed do eiusmod tempor incididunt ut labore et 
+                  dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+              </div>
+              <div class="box">
+                <h4>2018-2022</h4>
+                <h3>High School Degree</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                  elit, sed do eiusmod tempor incididunt ut labore et 
+                  dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+              </div>
+              <div class="box">
+                <h4>2018-2022</h4>
+                <h3>High School Degree</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                  elit, sed do eiusmod tempor incididunt ut labore et 
+                  dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="col">
+            <header id="title">
+              <h2>WORK EXPERIENCE</h2>
+            </header>
+            <div class="contents">
+              <div class="box">
+                <h4>Data Scientist</h4>
+                <h3>High School Degree</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                  elit, sed do eiusmod tempor incididunt ut labore et 
+                  dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+              </div>
+              <div class="box">
+                <h4>Data Scientist</h4>
+                <h3>High School Degree</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                  elit, sed do eiusmod tempor incididunt ut labore et 
+                  dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+              </div>
+              <div class="box">
+                <h4>Data Scientist</h4>
+                <h3>High School Degree</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
+                  elit, sed do eiusmod tempor incididunt ut labore et 
+                  dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
     </main>
   </body>
 </html>
