html errors fixed

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div id="container">
         <div class="row">
           <section class="col">
-            <header id="title">
+            <header class="title">
               <h2>EDUCATION</h2>
             </header>
             <div class="contents">
@@ -219,7 +219,7 @@
             </div>
           </section>
           <section class="col">
-            <header id="title">
+            <header class="title">
               <h2>WORK EXPERIENCE</h2>
             </header>
             <div class="contents">
