--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="aboutme_contents">
             <section class="myimg">
               <h2>Hi!</h2>
-              <img src="image_boy.png" alt="" id="bioimg">
+              <img src="my.JPG" alt="" id="bioimg">
             </section>
             <section class="bio">
               <h1>About Me</h1>
