--- a/index.html
+++ b/index.html
@@ -57,13 +57,18 @@
             <section class="bio">
               <h1>About Me</h1>
               <h2>Student at UCSD and majoring in Math-CS</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua.
+              <p>I am a rising junior majoring in Math-CS at University 
+                of California, San Diego. I have a minor declared in Data 
+                Science, active from fall 2023 and am currently working as 
+                a junior data scientist at Walmart Global Tech in Sunnyvale,
+                 California over the summer.
               </p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua. Ut enim ad minim veniam.
+              <p> I am highly motivated and have a passion for creating and
+                 supporting great products. I have the ability to learn new 
+                 skills quickly and use the skills efficiently. I thrive on
+                collaboration and on love to work with people of all 
+                backgrounds and disciplines as I have very strong verbal 
+                and written communication skills.
               </p>
               <div class="personal_info">
                 <div><span>Name:</span><span>Siddhant Bhagat</span></div>
@@ -86,58 +91,47 @@
         <div class="skills_container">
           <section class="skills_title">
             <h1>My Skills</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-              elit, sed do eiusmod tempor incididunt ut labore et 
-              dolore magna aliqua.
+            <p>
+              These are the skills that I am proficient in and have
+              developed over the years
             </p>
           </section>
           <section class="skills_container_2">
             <div class="skills_box">
               <i class="fa-brands fa-java"></i>
               <h2>Java</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua.
+              <p>
+                I will fit the content over here
               </p>
             </div>
             <div class="skills_box">
               <i class="fa-solid fa-code"></i>
               <h2>C++</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua.
+              <p>I will fit the content over here
               </p>
             </div>
             <div class="skills_box">
               <i class="fa-brands fa-python"></i>
               <h2>Python</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua.
+              <p>I will fit the content over here
               </p>
             </div>
             <div class="skills_box">
               <i class="fa-brands fa-html5"></i>
               <h2>HTML</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua.
+              <p>I will fit the content over here
               </p>
             </div>
             <div class="skills_box">
               <i class="fa-brands fa-css3-alt"></i>
               <h2>CSS</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua.
+              <p>I will fit the content over here
               </p>
             </div>
             <div class="skills_box">
               <i class="fa-brands fa-js"></i>
               <h2>JavaScript</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua.
+              <p>I will fit the content over here
               </p>
             </div>
           </section>
@@ -150,34 +144,30 @@
         <div class="projects_container">
           <section class="projects_title">
             <h1>Projects</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-              elit, sed do eiusmod tempor incididunt ut labore et 
-              dolore magna aliqua.
+            <p>These are the projects that I have made during high School
+              and UCSD
             </p>
           </section>
           <section class="projects_container_2">
             <div class="projects_box">
               <i class="fa-solid fa-book"></i>
               <h2>Research Paper</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua.
+              <p>Research paper in biomolecular docking at a lab at
+                Jawaharlal Nehru University
               </p>
             </div>
             <div class="projects_box">
               <i class="fa-solid fa-mobile"></i>
               <h2>ZooSeeker</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua.
+              <p>App in android studio that provides directions to animal
+                exhibits in the San Diego zoo
               </p>
             </div>
             <div class="projects_box">
               <i class="fa-brands fa-github"></i>
               <h2>GitHub</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit, sed do eiusmod tempor incididunt ut labore et 
-                dolore magna aliqua.
+              <p>This will be a link to my github for additional work that
+                I have done
               </p>
             </div>
           </section>
@@ -194,27 +184,25 @@
             </header>
             <div class="contents">
               <div class="box">
-                <h4>2018-2022</h4>
-                <h3>High School Degree</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                  elit, sed do eiusmod tempor incididunt ut labore et 
-                  dolore magna aliqua. Ut enim ad minim veniam.
+                <h4>2020-2024</h4>
+                <h3>Bachelor's Degree</h3>
+                <p>Pursuing a bachelors degree at UCSD is Math-CS. I will
+                  fit some more content here
                 </p>
               </div>
               <div class="box">
-                <h4>2018-2022</h4>
+                <h4>2006-2020</h4>
                 <h3>High School Degree</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                  elit, sed do eiusmod tempor incididunt ut labore et 
-                  dolore magna aliqua. Ut enim ad minim veniam.
+                <p>High school from New Delhi, India. Took the subjects
+                  Physics, Chemistry, Maths, Computer Science, and English
                 </p>
               </div>
               <div class="box">
-                <h4>2018-2022</h4>
-                <h3>High School Degree</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                  elit, sed do eiusmod tempor incididunt ut labore et 
-                  dolore magna aliqua. Ut enim ad minim veniam.
+                <h4>2019-2020</h4>
+                <h3>Summer School</h3>
+                <p>Attended a summer school at Stanford univesity. Learnt
+                  coding and its principles. I will fit some more content
+                  here
                 </p>
               </div>
             </div>
@@ -225,24 +213,25 @@
             </header>
             <div class="contents">
               <div class="box">
-                <h4>Data Scientist</h4>
-                <h3>High School Degree</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                  elit, sed do eiusmod tempor incididunt ut labore et 
-                  dolore magna aliqua. Ut enim ad minim veniam.
+                <h4>Summer 2022</h4>
+                <h3>Data Scientist, <i>Walmart Global Tech</i></h3>
+                <p>Working as a junior data scientist in the data science 
+                  team at Walmart. Helping in data analysis and testing of 
+                  supply chain and network simulator along with the use of 
+                  API’s for querying dashboarding
                 </p>
               </div>
               <div class="box">
-                <h4>Data Scientist</h4>
-                <h3>High School Degree</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                  elit, sed do eiusmod tempor incididunt ut labore et 
-                  dolore magna aliqua. Ut enim ad minim veniam.
+                <h4>Summer 2020</h4>
+                <h3>SDE Intern, <i>STJ Electricals</i></h3>
+                <p>Explored biometric fingerprint and retina scanners. 
+                  Learned the backend implementation of these devices 
+                  Helped in large scale testing of biometric devices. 
                 </p>
               </div>
               <div class="box">
-                <h4>Data Scientist</h4>
-                <h3>High School Degree</h3>
+                <h4>Summer 2019</h4>
+                <h3>Research Intern, <i>Biotech Lab, JNU</i></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
                   elit, sed do eiusmod tempor incididunt ut labore et 
                   dolore magna aliqua. Ut enim ad minim veniam.
