--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <h2><span>Siddhant</span></h2>
           </div>
           <ul>
-            <li><a href="">About Me</a></li>
-            <li><a href="">Skills</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Work Experience</a></li>
+            <li><a href="#aboutme">About Me</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="container">Work Experience</a></li>
             <li><a href="">Contact</a></li>
           </ul>
           <div id="hamburger">
