--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#aboutme">About Me</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="container">Work Experience</a></li>
+            <li><a href="#container">Work Experience</a></li>
             <li><a href="">Contact</a></li>
           </ul>
           <div id="hamburger">
