--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#container">Work Experience</a></li>
             <li><a href="">Contact</a></li>
+            <li><a href="#HW4">HW4</a></li>
           </ul>
           <div id="hamburger">
             <div class="small"></div>
@@ -240,6 +241,19 @@
             </div>
           </section>
         </div>
+      </div>
+
+      <div id="HW4">
+        <section>
+          <h1>HW4</h1>
+        </section>
+        <nav class="navbar_2">
+          <ul>
+            <li><a href="nativedialogs.html">Part 1</a></li>
+            <li><a href="">Part 2</a></li>
+            <li><a href="">Part 3</a></li>
+          </ul>
+        </nav>
       </div>
     </main>
   </body>
