--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
         <nav class="navbar_2">
           <ul>
             <li><a href="nativedialogs.html">Part 1</a></li>
-            <li><a href="">Part 2</a></li>
-            <li><a href="">Part 3</a></li>
+            <li><a href="customdialog.html">Part 2</a></li>
+            <li><a href="crud.html">Part 3</a></li>
           </ul>
         </nav>
       </div>
