--- a/crud.html
+++ b/crud.html
@@ -12,13 +12,13 @@
       <h1>Blog Posts</h1>
       <form>
         <h2>New Post</h2>
-        <label for="title">Title:</label>
+        <label for="title">Post Title:</label>
         <input type="text" id="title" />
         <br />
-        <label for="date">Date:</label>
+        <label for="date">Post Date:</label>
         <input type="date" id="date" />
         <br />
-        <label for="summary">Summary:</label>
+        <label for="summary">Post Summary:</label>
         <input type="text" id="summary" />
         <br />
         <button type="button" id="add-post-btn">Add Post</button>
@@ -26,29 +26,6 @@
       <hr />
       <h2>Posts</h2>
       <ul id="posts"></ul>
-    
-      <!-- <button id="add-post-btn">Add Post</button>
-
-      
-      <dialog id="add-post-dialog">
-        <form id="add-post-form">
-          <label for="title">Title:</label>
-          <input type="text" id="title" required /><br />
-
-          <label for="date">Date:</label>
-          <input type="date" id="date" required /><br />
-
-          <label for="summary">Summary:</label>
-          <textarea id="summary" required></textarea><br />
-
-          <button type="submit">Submit</button>
-          <button type="button" id="cancel-post-btn">Cancel</button>
-        </form>
-      </dialog> -->
-
-      <!-- Posts list -->
-      <ul id="posts"></ul>
-
       <script src="blog.js"></script>
     </main>
   </body>
